Create All and controller , db files

--- a/home.html
+++ b/home.html
@@ -50,11 +50,11 @@
         <h1 class="text-center">Police News</h1><img src="assets/img/criminalimg.png">
         <blockquote>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <footer>Someone famous</footer>
+            <div>Someone famous</div>
         </blockquote>
         <blockquote>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <footer>Someone famous</footer>
+            <div>Someone famous</div>
         </blockquote>
     </div>
     <div class="col-md-12">
